k8s/node-backend-app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
  namespace: ameen2607-dev
spec:
  selector:
    app: node-backend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
