k8s/node-backend-app1/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-route
  namespace: ameen2607-dev
spec:
  to:
    kind: Service
    name: node-service
  port:
    targetPort: 3002
  tls:
    termination: edge
